--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ font-weight: 400&700; */
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -37,10 +38,17 @@ nav {
     justify-content: space-between;
 }
 
-a {
+nav a {
     margin: 0 40px;
+}
+
+a {
     color: black;
     text-decoration: none;
+}
+
+p {
+    color: #5E6282;
 }
 
 button {
@@ -48,6 +56,7 @@ button {
     height: 60px;
     border-radius: 10px;
     border-style: none;
+    padding: 0 30px;
 }
 
 button a {
@@ -65,7 +74,7 @@ header h2 {
 }
 
 header h1 {
-    font-size: 89px;
+    font-size: 60px;
     font-family: 'Volkhov', serif;
 }
 
@@ -88,5 +97,9 @@ header p {
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.debug {
+    margin-bottom: -40px;
 }
 
