--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,20 @@ nav a {
     margin: 0 40px;
 }
 
+nav a:hover {
+    color: #F1A501;
+    border: #F1A501 solid 2px;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
 a {
     color: black;
     text-decoration: none;
+}
+
+b {
+    text-decoration: underline;
 }
 
 p {
