--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ section h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-top: 40px;
+    margin: 40px 0;
 }
 
 .smallBoxCategory {
@@ -183,5 +183,27 @@ section h1 {
 .txtSmall-copyright {
     text-align: center;
     margin: 50px 0;
+}
+
+.decorationFlower {
+    position: absolute;
+    top: 1648px;
+    left: 1370px;
+    z-index: -1;
+}
+
+figcaption {
+    background-color: red;
+    width: 100%;
+
+}
+
+figure h1 {
+    font-size: 20px;
+}
+
+.smallBoxCaption {
+    display: flex;
+    flex-direction: row;
 }
 
